# project-templates

./: README.md
c/: Makefile
c-small/: Makefile  linker.ld
c-small/src/: main.c
c-small/src/libc/: asm.h  assert.h  complex.h  ctype.h  errno.h  fenv.h  float.h  inttypes.h  iso646.h  limits.h  locale.h  math.h  setjmp.h  signal.h  stdarg.h  stdbool.h  stddef.h  stdint.h  stdio.h  stdlib.h  string.h  tgmath.h  time.h  unistd.h  wchar.h  wctype.h
c/src/: main.c
cpp/: Makefile
cpp-cmake/: CMakeLists.txt  Makefile
cpp-cmake/src/: main.cpp
go/: Makefile  go.mod
go/src/: main.go
go/src/pop/: go.mod  pop.go
i386/: Makefile
i386/src/: footer.s  header.s  macros.s  main.s  syscalls32.s
rust/: Makefile
rust/src/: main.rs
zig/: Makefile  build.zig
zig/src/: main.zig
